Utilities para creación de espectrogramas

--- a/Paper_iESPnet_pruebas/05.1 Exploracion.ipynb
+++ b/Paper_iESPnet_pruebas/05.1 Exploracion.ipynb
@@ -16,22 +16,13 @@
     "import pandas as pd\n",
     "import sys\n",
     "import os\n",
-    "\n",
-    "sys.path.insert(1, '/home/martin/Documentos/env_thalamus/01 Thalamus-PI/iESPnet_SRC_main/utilities')\n",
-    "import IO # customized functions for navigating throught the folders and files\n",
-    "import Epochs\n",
-    "\n",
     "import torch\n",
     "import torchaudio.transforms as T\n",
     "import numpy as np\n",
     "import mne\n",
     "mne.set_log_level(verbose='warning') #to avoid info at terminal\n",
-    "import matplotlib.pyplot as plt\n",
     "import librosa\n",
-    "\n",
-    "from scipy import fft as sp_fft\n",
-    "from itertools import permutations\n",
-    "from utilit import get_data_files, get_annot_files, get_epochs_zeropad_all, get_events, get_patient_PE, get_spectrogram"
+    "import utilit_espectrograms as ue"
    ]
   },
   {
@@ -103,7 +94,7 @@
    ],
    "source": [
     "# lista con ids de pacientes\n",
-    "RNSIDS = IO.get_subfolders(DATA_DIR)\n",
+    "RNSIDS = ue.get_subfolders(DATA_DIR)\n",
     "print(RNSIDS)\n",
     "print()\n",
     "print(len(RNSIDS))"
@@ -187,13 +178,13 @@
     "for s in range(len(RNSIDS)):\n",
     "    \n",
     "    print('Running subject ' + RNSIDS[s] + ' [s]: ' + str(s))\n",
-    "    data_files = get_data_files(DATA_DIR, RNSIDS[s], Verbose=False)\n",
-    "    annot_files = get_annot_files(DATA_DIR, RNSIDS[s], Verbose=False)\n",
+    "    data_files = ue.get_data_files(DATA_DIR, RNSIDS[s], Verbose=False)\n",
+    "    annot_files = ue.get_annot_files(DATA_DIR, RNSIDS[s], Verbose=False)\n",
     "\n",
     "    for nepoch in range(len(data_files)):\n",
     "\n",
-    "        events = get_events(annot_files[nepoch])\n",
-    "        X, labels, times = get_epochs_zeropad_all(data_files[nepoch], events)\n",
+    "        events = ue.get_events(annot_files[nepoch])\n",
+    "        X, labels, times = ue.get_epochs_zeropad_all(data_files[nepoch], events)\n",
     "\n",
     "        # creo que no hace falta\n",
     "        if len(X) == 0:\n",
@@ -203,7 +194,7 @@
     "        [nt, nc, ns] = np.shape(X)\n",
     "        \n",
     "\n",
-    "        hosp_id, subject_id, PE_id = get_patient_PE(data_files[nepoch],RNSIDS[s])\n",
+    "        hosp_id, subject_id, PE_id = ue.get_patient_PE(data_files[nepoch],RNSIDS[s])\n",
     "\n",
     "        for nfile in range(nt):\n",
     "            file = X[nfile, :, :]\n",
@@ -212,7 +203,7 @@
     "            # normalize the waveform\n",
     "            signal = (signal - signal.mean()) / signal.std()\n",
     "\n",
-    "            spec, t, f = get_spectrogram(signal, ECOG_SAMPLE_RATE, SPEC_NFFT, SPEC_WIN_LEN, SPEC_HOP_LEN)\n",
+    "            spec, t, f = ue.get_spectrogram(signal, ECOG_SAMPLE_RATE, SPEC_NFFT, SPEC_WIN_LEN, SPEC_HOP_LEN)\n",
     "\n",
     "            # spec to DB\n",
     "            spec = librosa.power_to_db(spec, top_db=top_db)\n",
@@ -261,7 +252,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
