--- a/Paper_iESPnet_pruebas/01.2 Exploracion.ipynb
+++ b/Paper_iESPnet_pruebas/01.2 Exploracion.ipynb
@@ -8,7 +8,7 @@
     {
      "data": {
       "text/plain": [
-       "<torch._C.Generator at 0x783e50865ab0>"
+       "<torch._C.Generator at 0x7cb6809c9ab0>"
       ]
      },
      "execution_count": 1,
@@ -307,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -349,7 +349,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -360,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -373,7 +373,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -522,7 +522,24 @@
    ],
    "source": [
     "# se puede visualizar como el onset esta cercano a 0 segundos en estos casos\n",
-    "df_meta[df_meta['label']==2]"
+    "df_meta[df_meta['label']==2]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(44223, 4)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df_meta.shape)"
    ]
   },
   {
@@ -698,18 +715,66 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(44158, 4)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df_meta.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_meta.drop(df_meta[df_meta['rns_id']=='PIT-RNS9793'].index, inplace = True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
      "data": {
       "text/plain": [
-       "(291, 4)"
+       "(44126, 4)"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_meta[(df_meta['rns_id']=='PIT-RNS1603') & (df_meta['label']== 1)].shape"
+    "df_meta.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['PIT-RNS1603', 'PIT-RNS6989', 'PIT-RNS3016', 'PIT-RNS1529', 'PIT-RNS7168', 'PIT-RNS4098', 'PIT-RNS1836', 'PIT-RNS9183', 'PIT-RNS1440', 'PIT-RNS1713', 'PIT-RNS9536', 'PIT-RNS2543', 'PIT-RNS1438', 'PIT-RNS1534', 'PIT-RNS1703', 'PIT-RNS1556', 'PIT-RNS1597', 'PIT-RNS6992', 'PIT-RNS8326', 'PIT-RNS2227', 'PIT-RNS8163', 'PIT-RNS4998', 'PIT-RNS8973', 'PIT-RNS6806', 'PIT-RNS1090', 'PIT-RNS2368', 'PIT-RNS6762', 'PIT-RNS2938', 'PIT-RNS7525', 'PIT-RNS0427', 'PIT-RNS8076'] \n",
+      "\n",
+      "Se tienen los registros de 31 pacientes\n"
+     ]
+    }
+   ],
+   "source": [
+    "# se quiere hacer una lista con los id de los pacientes una unica vez\n",
+    "patients = df_meta['rns_id'].unique().tolist()\n",
+    "print(patients,'\\n')\n",
+    "print('Se tienen los registros de {} pacientes'.format(len(patients)))"
    ]
   },
   {
@@ -720,10 +785,30 @@
     {
      "data": {
       "text/plain": [
-       "(1808, 4)"
+       "(291, 4)"
       ]
      },
      "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_meta[(df_meta['rns_id']=='PIT-RNS1603') & (df_meta['label']== 1)].shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1808, 4)"
+      ]
+     },
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -770,189 +855,6 @@
     "test_df  = df_meta[df_meta['rns_id'] == patients[s]]\n",
     "test_df.reset_index(drop=True, inplace=True)\n",
     "train_df.drop(train_df[train_df['rns_id'] == patients[s]].index, inplace = True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Hace falta sacar el paciente que no tiene definido en donde esta implantado?"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>rns_id</th>\n",
-       "      <th>data</th>\n",
-       "      <th>label</th>\n",
-       "      <th>time</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>PIT-RNS1603</td>\n",
-       "      <td>PIT_RNS1603_20150804-1_E0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>PIT-RNS1603</td>\n",
-       "      <td>PIT_RNS1603_20150804-1_E1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>PIT-RNS1603</td>\n",
-       "      <td>PIT_RNS1603_20150804-1_E2</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>PIT-RNS1603</td>\n",
-       "      <td>PIT_RNS1603_20150804-1_E3</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>PIT-RNS1603</td>\n",
-       "      <td>PIT_RNS1603_20150804-1_E4</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>44218</th>\n",
-       "      <td>PIT-RNS8076</td>\n",
-       "      <td>PIT_RNS8076_20190806-1_E21</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>44219</th>\n",
-       "      <td>PIT-RNS8076</td>\n",
-       "      <td>PIT_RNS8076_20190806-1_E22</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>44220</th>\n",
-       "      <td>PIT-RNS8076</td>\n",
-       "      <td>PIT_RNS8076_20190806-1_E23</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>44221</th>\n",
-       "      <td>PIT-RNS8076</td>\n",
-       "      <td>PIT_RNS8076_20190806-1_E24</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>44222</th>\n",
-       "      <td>PIT-RNS8076</td>\n",
-       "      <td>PIT_RNS8076_20190806-1_E25</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>44126 rows × 4 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "            rns_id                        data  label  time\n",
-       "0      PIT-RNS1603   PIT_RNS1603_20150804-1_E0      0   0.0\n",
-       "1      PIT-RNS1603   PIT_RNS1603_20150804-1_E1      0   0.0\n",
-       "2      PIT-RNS1603   PIT_RNS1603_20150804-1_E2      0   0.0\n",
-       "3      PIT-RNS1603   PIT_RNS1603_20150804-1_E3      0   0.0\n",
-       "4      PIT-RNS1603   PIT_RNS1603_20150804-1_E4      0   0.0\n",
-       "...            ...                         ...    ...   ...\n",
-       "44218  PIT-RNS8076  PIT_RNS8076_20190806-1_E21      0   0.0\n",
-       "44219  PIT-RNS8076  PIT_RNS8076_20190806-1_E22      0   0.0\n",
-       "44220  PIT-RNS8076  PIT_RNS8076_20190806-1_E23      0   0.0\n",
-       "44221  PIT-RNS8076  PIT_RNS8076_20190806-1_E24      0   0.0\n",
-       "44222  PIT-RNS8076  PIT_RNS8076_20190806-1_E25      0   0.0\n",
-       "\n",
-       "[44126 rows x 4 columns]"
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df_meta.drop(df_meta[df_meta['rns_id']=='PIT-RNS9793'].index, inplace = True)\n",
-    "df_meta"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0\n",
-      "1\n",
-      "2\n",
-      "3\n",
-      "4\n",
-      "5\n",
-      "6\n",
-      "7\n",
-      "8\n",
-      "9\n",
-      "10\n",
-      "11\n",
-      "12\n",
-      "13\n",
-      "14\n"
-     ]
-    }
-   ],
-   "source": [
-    "for s in range(0,15):\n",
-    "    print(s)"
    ]
   }
  ],
