--- a/Paper_iESPnet_pruebas/01-Exploraciones/01.1 Exploracion.ipynb
+++ b/Paper_iESPnet_pruebas/01-Exploraciones/01.1 Exploracion.ipynb
@@ -9,16 +9,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<torch._C.Generator at 0x799723d668d0>"
+       "<torch._C.Generator at 0x7d2da670ae50>"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -176,7 +176,7 @@
        "4  PIT-RNS1603  PIT_RNS1603_20150804-1_E4      0   0.0"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -267,7 +267,7 @@
        "44222  PIT-RNS8076  PIT_RNS8076_20190806-1_E25      0   0.0"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -279,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -288,7 +288,7 @@
        "Index(['rns_id', 'data', 'label', 'time'], dtype='object')"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -300,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -309,7 +309,7 @@
        "(44223, 4)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -321,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -334,7 +334,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -346,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -355,7 +355,7 @@
        "pandas.core.frame.DataFrame"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -367,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -398,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -415,7 +415,7 @@
        "      dtype=object)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -427,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -446,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -468,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -510,7 +510,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -521,7 +521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -651,7 +651,7 @@
        "[426 rows x 4 columns]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -664,7 +664,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -677,7 +677,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -690,7 +690,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -703,7 +703,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -715,7 +715,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -845,7 +845,7 @@
        "[65 rows x 4 columns]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -857,7 +857,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -987,7 +987,7 @@
        "[9477 rows x 4 columns]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -999,7 +999,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1011,7 +1011,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1024,7 +1024,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1033,7 +1033,7 @@
        "(291, 4)"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1044,7 +1044,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1053,7 +1053,7 @@
        "(1808, 4)"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1064,7 +1064,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1080,17 +1080,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_subjects = '/media/martin/Disco2/Rns_Data/PITT/METADATA/subjects_info_zeropadall.csv'\n",
+    "data_subjects = '/media/martin/Disco2/Rns_Data/subjects_info_nopadall.csv'\n",
     "df_subjects = pd.read_csv(data_subjects)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1121,7 +1121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1130,7 +1130,7 @@
        "(32, 8)"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1141,7 +1141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1178,57 +1178,57 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>PIT-RNS0427</td>\n",
+       "      <td>RNS0427</td>\n",
        "      <td>EP1193</td>\n",
        "      <td>F</td>\n",
        "      <td>LCM - left thalamus (depth)</td>\n",
        "      <td>RCM - right thalamus (depth)</td>\n",
        "      <td>Thalamus</td>\n",
-       "      <td>1431</td>\n",
-       "      <td>268</td>\n",
+       "      <td>1496</td>\n",
+       "      <td>279</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>PIT-RNS1090</td>\n",
+       "      <td>RNS1090</td>\n",
        "      <td>EP1134</td>\n",
        "      <td>M</td>\n",
        "      <td>A - right heterotopia (depth)</td>\n",
        "      <td>B - right heterotopia (depth)</td>\n",
        "      <td>Migrational Dysplasia (Heterotopia/PMG)</td>\n",
-       "      <td>1567</td>\n",
-       "      <td>268</td>\n",
+       "      <td>1576</td>\n",
+       "      <td>270</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>PIT-RNS1438</td>\n",
+       "      <td>RNS1438</td>\n",
        "      <td>EP1175</td>\n",
        "      <td>M</td>\n",
        "      <td>LHip - left hippocampus (depth)</td>\n",
        "      <td>Lins - left insula (depth)</td>\n",
        "      <td>Mixed Hippocampus - Neocortex</td>\n",
-       "      <td>2147</td>\n",
+       "      <td>2409</td>\n",
        "      <td>25</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>PIT-RNS1440</td>\n",
+       "      <td>RNS1440</td>\n",
        "      <td>EP1071</td>\n",
        "      <td>F</td>\n",
        "      <td>D - basal temporal (depth)</td>\n",
        "      <td>S - temporo-occipital (strip)</td>\n",
        "      <td>Neocortex</td>\n",
-       "      <td>3077</td>\n",
-       "      <td>798</td>\n",
+       "      <td>3102</td>\n",
+       "      <td>799</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>PIT-RNS1529</td>\n",
+       "      <td>RNS1529</td>\n",
        "      <td>EP1127</td>\n",
        "      <td>F</td>\n",
        "      <td>LHD - left hippocampus (depth)</td>\n",
        "      <td>RHD - right hippocampus (depth)</td>\n",
        "      <td>Hippocampus</td>\n",
-       "      <td>1255</td>\n",
+       "      <td>1315</td>\n",
        "      <td>440</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -1236,12 +1236,12 @@
        "</div>"
       ],
       "text/plain": [
-       "   rns_deid_id      ID Gender          underlying_tissue_lead1  \\\n",
-       "0  PIT-RNS0427  EP1193      F      LCM - left thalamus (depth)   \n",
-       "1  PIT-RNS1090  EP1134      M    A - right heterotopia (depth)   \n",
-       "2  PIT-RNS1438  EP1175      M  LHip - left hippocampus (depth)   \n",
-       "3  PIT-RNS1440  EP1071      F       D - basal temporal (depth)   \n",
-       "4  PIT-RNS1529  EP1127      F   LHD - left hippocampus (depth)   \n",
+       "  rns_deid_id      ID Gender          underlying_tissue_lead1  \\\n",
+       "0     RNS0427  EP1193      F      LCM - left thalamus (depth)   \n",
+       "1     RNS1090  EP1134      M    A - right heterotopia (depth)   \n",
+       "2     RNS1438  EP1175      M  LHip - left hippocampus (depth)   \n",
+       "3     RNS1440  EP1071      F       D - basal temporal (depth)   \n",
+       "4     RNS1529  EP1127      F   LHD - left hippocampus (depth)   \n",
        "\n",
        "           underlying_tissue_lead2                                    Group  \\\n",
        "0     RCM - right thalamus (depth)                                 Thalamus   \n",
@@ -1251,14 +1251,14 @@
        "4  RHD - right hippocampus (depth)                              Hippocampus   \n",
        "\n",
        "   Nfiles  Nsz  \n",
-       "0    1431  268  \n",
-       "1    1567  268  \n",
-       "2    2147   25  \n",
-       "3    3077  798  \n",
-       "4    1255  440  "
+       "0    1496  279  \n",
+       "1    1576  270  \n",
+       "2    2409   25  \n",
+       "3    3102  799  \n",
+       "4    1315  440  "
       ]
      },
-     "execution_count": 26,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1269,7 +1269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1280,7 +1280,7 @@
        "       'Neocortical', 'Mixed Thalamus - Neocortex', nan], dtype=object)"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1290,15 +1290,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "['PIT-RNS0427' 'PIT-RNS1713' 'PIT-RNS3016' 'PIT-RNS7168' 'PIT-RNS8326']\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['PIT-RNS0427' 'PIT-RNS1713' 'PIT-RNS3016' 'PIT-RNS7168' 'PIT-RNS8326']\n"
+      "['RNS0427' 'RNS1713' 'RNS3016' 'RNS7168' 'RNS8326']\n"
      ]
     }
    ],
