--- a/Paper_DSF_pruebas/01 Exploraciones/01 Exploracion.ipynb
+++ b/Paper_DSF_pruebas/01 Exploraciones/01 Exploracion.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -538,14 +538,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "def _data_path(path=None, force_update=False, update_path=None, verbose=None):\n",
     "    \"\"\"Get path to local copy of PC18 dataset.\n",
     "    \"\"\"\n",
-    "    key = 'PC18_DATASET_PATH'\n",
+    "    key =  'PC18_DATASET_PATH'\n",
     "    name = 'PC18_DATASET_SLEEP'\n",
     "    path = _get_path(path, key, name)\n",
     "    subdirs = os.listdir(path)\n",
@@ -553,7 +553,7 @@
     "        # already at the training and test folders level\n",
     "        return path\n",
     "    else:\n",
-    "        return op.join(path, 'pc18-sleep-data')\n",
+    "        return op.join('/media/martin/Disco2', 'pc18-sleep-data')\n",
     "\n",
     "def fetch_pc18_data(subjects, path=None, force_update=False, update_path=None,\n",
     "                    base_url=PC18_URL, verbose=None):\n",
@@ -675,7 +675,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -716,19 +716,12 @@
     "    \"\"\"\n",
     "    def __init__(self, subject_ids=None, path=None, load_eeg_only=True,\n",
     "                 preproc=None, windower=None, n_jobs=1):\n",
-    "        if subject_ids is None:\n",
-    "            subject_ids = range(1983)\n",
-    "        elif subject_ids == 'training':\n",
-    "            subject_ids = range(989, 1983)\n",
-    "        elif subject_ids == 'test':\n",
-    "            subject_ids = range(989)\n",
-    "        paths = fetch_pc18_data(subject_ids, path=path)\n",
     "\n",
+    "        paths = fetch_pc18_data(subject_ids, path=path)\n",
     "        self.info_df = pd.read_csv(PC18_INFO)\n",
     "\n",
     "        if n_jobs == 1:\n",
-    "            all_base_ds = [self._load_raw(\n",
-    "                subject_id, p[0], p[2], load_eeg_only=load_eeg_only,\n",
+    "            all_base_ds = [self._load_raw(subject_id, p[0], p[2], load_eeg_only=load_eeg_only,\n",
     "                preproc=preproc, windower=windower)\n",
     "                for subject_id, p in zip(subject_ids, paths)]\n",
     "        else:\n",
@@ -792,7 +785,7 @@
     "            out = windower(out)\n",
     "            out.windows.load_data()\n",
     "\n",
-    "        return out\n"
+    "        return out"
    ]
   },
   {
@@ -801,6 +794,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "def scale(x, k):\n",
+    "    return k * x\n",
+    "\n",
+    "def cast(x, dtype):\n",
+    "    return x.astype(dtype)\n",
+    "\n",
     "def load_data(dataset, window_size_s, n_jobs):\n",
     "    \"\"\"Load, preprocess and window data.\n",
     "    \"\"\"       \n",
@@ -825,7 +824,54 @@
     "\n",
     "    dataset = PC18(subject_ids=subject_ids, preproc=preproc, windower=windower, n_jobs=n_jobs)\n",
     "\n",
-    "    return dataset"
+    "    return dataset\n",
+    "\n",
+    "windows_dataset = load_data('pc18_debug', 30, 4)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Estoy teniendo un problema con la parte de _load_raw"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def scale(x, k):\n",
+    "    return k * x\n",
+    "\n",
+    "def cast(x, dtype):\n",
+    "    return x.astype(dtype)\n",
+    "\n",
+    "dataset       = 'pc18_debug'\n",
+    "window_size_s = 30\n",
+    "n_jobs        = 4 \n",
+    "subject_ids   = [989, 990, 991]\n",
+    "ch_names      = ['F3-M2', 'F4-M1', 'O1-M2', 'O2-M1']\n",
+    "\n",
+    "preproc = [\n",
+    "    Preprocessor('pick_channels', ch_names=ch_names, ordered=True),\n",
+    "    Preprocessor('filter', l_freq=None, h_freq=30, n_jobs=1),\n",
+    "    Preprocessor('resample', sfreq=100., n_jobs=1),\n",
+    "    Preprocessor(scale, k=1e6),\n",
+    "    Preprocessor(cast, dtype=np.float32)\n",
+    "]\n",
+    "\n",
+    "window_size_samples = int(window_size_s * 100)\n",
+    "mapping = {'W': 0, 'N1': 1, 'N2': 2, 'N3': 3, 'R': 4}\n",
+    "windower = partial(\n",
+    "    _create_windows_from_events, infer_mapping=False,\n",
+    "    infer_window_size_stride=False, trial_start_offset_samples=0,\n",
+    "    trial_stop_offset_samples=0,\n",
+    "    window_size_samples=window_size_samples,\n",
+    "    window_stride_samples=window_size_samples, mapping=mapping)\n",
+    "\n",
+    "dataset = PC18(subject_ids=subject_ids, preproc=preproc, windower=windower, n_jobs=n_jobs)"
    ]
   }
  ],
