--- a/Paper_DSF_pruebas/01 Exploraciones/01 Exploracion.ipynb
+++ b/Paper_DSF_pruebas/01 Exploraciones/01 Exploracion.ipynb
@@ -20,7 +20,6 @@
     "from braindecode.preprocessing.preprocess import _preprocess, preprocess, Preprocessor\n",
     "from braindecode.preprocessing.windowers  import _create_windows_from_events\n",
     "from functools import partial\n",
-    "\n",
     "from joblib import Parallel, delayed"
    ]
   },
@@ -625,97 +624,15 @@
     "\n",
     "        if windower is not None:\n",
     "            out = windower(out)\n",
+    "            out.windows.load_data()\n",
     "        return out"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "4.1.0\n"
-     ]
-    }
-   ],
-   "source": [
-    "import wfdb\n",
-    "print(wfdb.__version__)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Using default location ~/mne_data for PC18_DATASET_SLEEP...\n",
-      "Creating RawArray with float64 data, n_channels=7, n_times=4770000\n",
-      "    Range : 0 ... 4769999 =      0.000 ... 23849.995 secs\n",
-      "Ready.\n",
-      "tr03-0029\n",
-      "<braindecode.datasets.base.BaseDataset object at 0x7ad3f6d92cb0>\n",
-      "NOTE: pick_channels() is a legacy function. New code should use inst.pick(...).\n",
-      "Creating RawArray with float64 data, n_channels=7, n_times=5147000\n",
-      "    Range : 0 ... 5146999 =      0.000 ... 25734.995 secs\n",
-      "Ready.\n",
-      "tr03-0005\n",
-      "<braindecode.datasets.base.BaseDataset object at 0x79cfd167ecb0>\n",
-      "NOTE: pick_channels() is a legacy function. New code should use inst.pick(...).\n",
-      "Creating RawArray with float64 data, n_channels=7, n_times=5992000\n",
-      "    Range : 0 ... 5991999 =      0.000 ... 29959.995 secs\n",
-      "Ready.\n",
-      "tr03-0052\n",
-      "<braindecode.datasets.base.BaseDataset object at 0x7b831e5a2cb0>\n",
-      "NOTE: pick_channels() is a legacy function. New code should use inst.pick(...).\n",
-      "Filtering raw data in 1 contiguous segment\n",
-      "Setting up low-pass filter at 30 Hz\n",
-      "\n",
-      "FIR filter parameters\n",
-      "---------------------\n",
-      "Designing a one-pass, zero-phase, non-causal lowpass filter:\n",
-      "- Windowed time-domain design (firwin) method\n",
-      "- Hamming window with 0.0194 passband ripple and 53 dB stopband attenuation\n",
-      "- Upper passband edge: 30.00 Hz\n",
-      "- Upper transition bandwidth: 7.50 Hz (-6 dB cutoff frequency: 33.75 Hz)\n",
-      "- Filter length: 89 samples (0.445 s)\n",
-      "\n",
-      "Filtering raw data in 1 contiguous segment\n",
-      "Setting up low-pass filter at 30 Hz\n",
-      "\n",
-      "FIR filter parameters\n",
-      "---------------------\n",
-      "Designing a one-pass, zero-phase, non-causal lowpass filter:\n",
-      "- Windowed time-domain design (firwin) method\n",
-      "- Hamming window with 0.0194 passband ripple and 53 dB stopband attenuation\n",
-      "- Upper passband edge: 30.00 Hz\n",
-      "- Upper transition bandwidth: 7.50 Hz (-6 dB cutoff frequency: 33.75 Hz)\n",
-      "- Filter length: 89 samples (0.445 s)\n",
-      "\n",
-      "Filtering raw data in 1 contiguous segment\n",
-      "Setting up low-pass filter at 30 Hz\n",
-      "\n",
-      "FIR filter parameters\n",
-      "---------------------\n",
-      "Designing a one-pass, zero-phase, non-causal lowpass filter:\n",
-      "- Windowed time-domain design (firwin) method\n",
-      "- Hamming window with 0.0194 passband ripple and 53 dB stopband attenuation\n",
-      "- Upper passband edge: 30.00 Hz\n",
-      "- Upper transition bandwidth: 7.50 Hz (-6 dB cutoff frequency: 33.75 Hz)\n",
-      "- Filter length: 89 samples (0.445 s)\n",
-      "\n",
-      "Used Annotations descriptions: ['N1', 'N2', 'N3', 'R', 'W']\n",
-      "Used Annotations descriptions: ['N1', 'N2', 'N3', 'R', 'W']\n",
-      "Used Annotations descriptions: ['N1', 'N2', 'N3', 'R', 'W']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def scale(x, k):\n",
     "    return k * x\n",
@@ -743,11 +660,14 @@
     "    window_size_samples = int(window_size_s * 100)\n",
     "    mapping             = {'W': 0, 'N1': 1, 'N2': 2, 'N3': 3, 'R': 4}\n",
     "    windower            = partial(\n",
-    "                                 _create_windows_from_events, infer_mapping=False,\n",
-    "                                 infer_window_size_stride=False, trial_start_offset_samples=0,\n",
+    "                                 _create_windows_from_events, \n",
+    "                                 infer_mapping=False,\n",
+    "                                 infer_window_size_stride=False, \n",
+    "                                 trial_start_offset_samples=0,\n",
     "                                 trial_stop_offset_samples=0,\n",
     "                                 window_size_samples=window_size_samples,\n",
-    "                                 window_stride_samples=window_size_samples, mapping=mapping\n",
+    "                                 window_stride_samples=window_size_samples, \n",
+    "                                 mapping=mapping\n",
     "                                 )\n",
     "\n",
     "    dataset = PC18(subject_ids=subject_ids, preproc=preproc, windower=windower, n_jobs=n_jobs)\n",
@@ -760,12 +680,42 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Para realizar esto, elimine una linea de codigo \n",
-    "\n",
-    "    if windower is not None:\n",
-    "        out = windower(out)\n",
-    "        out.windows.load_data()\n",
-    "    return out"
+    "Continuación luego de cargar los datos"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<__main__.PC18 object at 0x7f4d0bd482b0>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(windows_dataset)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0 1 2 3 4]\n"
+     ]
+    }
+   ],
+   "source": [
+    "available_classes = windows_dataset.get_metadata()['target'].unique()\n",
+    "print(available_classes)"
    ]
   },
   {
@@ -773,11 +723,6 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
    "source": []
   }
  ],
