--- a/Paper_DSF_pruebas/01 Exploraciones/01 Exploracion.ipynb
+++ b/Paper_DSF_pruebas/01 Exploraciones/01 Exploracion.ipynb
@@ -719,11 +719,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Entrenamiento "
+   ]
   }
  ],
  "metadata": {
