--- a/Paper_DSF_pruebas/01 Exploraciones/01 Exploracion.ipynb
+++ b/Paper_DSF_pruebas/01 Exploraciones/01 Exploracion.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Carga de datos DSF"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -716,13 +723,6 @@
    "source": [
     "available_classes = windows_dataset.get_metadata()['target'].unique()\n",
     "print(available_classes)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Entrenamiento "
    ]
   }
  ],
